[package]
name = "portping"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
ctable = { git = "https://github.com/dcopenhaver/ctable-rs" }
webpki-roots = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = "1.0"
